# sparse-hash-map

./: CHANGELOG.md  Cargo.toml  README.md
src/: growth_policy.rs  hasher.rs  lib.rs  map.rs  popcount.rs  serialize.rs  set.rs  sparse_array.rs  sparse_hash.rs  sparsity.rs  util.rs
tests/: allocator_tests.rs  heterogeneous_tests.rs  policy_tests.rs  popcount_tests.rs  sparse_map_tests.rs  sparse_set_tests.rs
tests/common/: mod.rs
