[package]
name = "sparse-hash-map"
version = "0.2.0"
edition = "2021"
description = "Open-addressing hash map and set that stay small at low load factor"
license = "MIT"
repository = "https://github.com/hey-jj/sparse-hash-map"
readme = "README.md"
keywords = ["hashmap", "hashset", "sparse", "memory", "hash"]
categories = ["data-structures"]

[dependencies]
